<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-autos"
    tools:context="com.example.navi.tecnocarappv3.ui.fragment.EditarPerfil">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:text="@string/title_EditarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark" />

        <ScrollView
            android:id="@+id/editar_perfil_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/editar_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_user_id"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:layout_marginTop="5dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Confirmar contraseña"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        tools:ignore="HardcodedText" />

                </android.support.design.widget.TextInputLayout>

                <!-- DATOS PERSONALES-->
                <TextView
                    android:text="@string/datosEdit_personales"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:layout_margin="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:paddingTop="5dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/promptEdit_user_name"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_ap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_ap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/promptEdit_user_ap"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_am"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_am"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/promptEdit_user_am"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/promptEdit_user_telefono"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_direccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/promptEdit_user_direccion"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/promptEdit_user_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="10"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_rfc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_rfc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/promptEdit_user_rfc"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/action_Editar"
                    android:textStyle="bold"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="@color/cardview_light_background"
                    android:layout_gravity="center_vertical|center_horizontal"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
