<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-autos"
    tools:context="com.example.navi.tecnocarappv3.view.fragment.NuevaCita">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:orientation="vertical">


        <TextView
            android:text="@string/title_nuevacita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/icono_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:src="@drawable/ic_date_range_black_48dp"
                tools:ignore="ContentDescription,ObsoleteLayoutParam,RtlHardcoded" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/txtFecha"
                android:layout_weight="1"
                android:hint="@string/prompt_fecha"
                android:focusable="true"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/icono_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:src="@drawable/ic_access_time_black_48dp"
                tools:ignore="ContentDescription,ObsoleteLayoutParam,RtlHardcoded" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/txtHora"
                android:layout_weight="1"
                android:hint="@string/prompt_hora"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerAutos" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_motivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top|start"
                android:hint="@string/prompt_detalle_cita"
                android:lines="10"
                android:padding="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_margin="16dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/aceptar"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/action_registrar_nueva_cita"
                android:drawableLeft="@drawable/ic_done_white_24dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:textColor="@color/cardview_light_background"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
